code/SampleProgramToInterface/src/main/java/com/sample/bad/GodClass.java
package com.sample.bad;

public class GodClass {

    public boolean isRooted() {
        return true;
    }
}  